v12/fixtures/ast/errors/rescue_guard/source.able
do {
  raise "boom"
} rescue {
  case "ignore" => "ignored",
  case msg => {
    if msg == "boom" {
      "handled";
    };
  }
};
